correccion de index
se saco el index y se dejo para general

--- a/HTML/Rusia.html
+++ b/HTML/Rusia.html
@@ -13,115 +13,114 @@
     </style>
 </head>
 <body>
-    <main>
-        <header class="header">
-            <h1>Rusia</h1>
+    <header class="header">
+        <h1>Rusia</h1>
+        <nav>
             <ul class="nav-list">
-                <ul>
-                    <li><a href="Australia.html">Australia</a></li>
-                    <li><a href="cancun.html">Cancun</a></li>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="Paris.html">Paris</a></li>
-                    <li><a href="NewYork.html">New York</a></li>
-                    <li><a href="Japon.html">Japon</a></li>
-                </ul>
-            </nav>
-        </header>
-        <aside>
-            <ul>
-                <li><a href="#locations">Atractivos</a></li>
-                <li><a href="#itinerario">Itinerario</a></li>
-                <li><a href="#Costos">Costos</a></li>
+                <li><a href="Australia.html">Australia</a></li>
+                <li><a href="cancun.html">Cancun</a></li>
+                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="Paris.html">Paris</a></li>
+                <li><a href="NewYork.html">New York</a></li>
+                <li><a href="Japon.html">Japon</a></li>
             </ul>
-        </aside>
-        <section class="info">
-            <h2>Información sobre Australia</h2>
-            <div id="parrafo1">
-                <p>¡Bienvenido a Rusia, un país lleno de historia, cultura y paisajes impresionantes! Desde la majestuosidad de Moscú hasta la belleza medieval de San Petersburgo, Rusia ofrece una experiencia única que te transportará a un mundo de maravillas.</p>
-            </div>
-            <details>
-                <summary>Leer más</summary>
-                <div id="parrafo2">
-                    <p>Explora la imponente Plaza Roja y maravíllate con la espectacular arquitectura del Kremlin en Moscú, o viaja en el tiempo mientras recorres los magníficos palacios y canales de San Petersburgo. Cada ciudad es un tesoro de historia y cultura, donde podrás sumergirte en la grandeza del pasado imperial ruso.</p>
+        </nav>
+        </header>
+        <main>
+            <aside>
+                <ul>
+                    <li><a href="#locations">Atractivos</a></li>
+                    <li><a href="#itinerario">Itinerario</a></li>
+                    <li><a href="#Costos">Costos</a></li>
+                </ul>
+            </aside>
+            <section class="info">
+                <h2>Información sobre Australia</h2>
+                <div id="parrafo1">
+                    <p>¡Bienvenido a Rusia, un país lleno de historia, cultura y paisajes impresionantes! Desde la majestuosidad de Moscú hasta la belleza medieval de San Petersburgo, Rusia ofrece una experiencia única que te transportará a un mundo de maravillas.</p>
                 </div>
-                <div id="parrafo3">
-                    <p>Pero Rusia no es solo historia; también es una tierra de naturaleza salvaje y paisajes impresionantes. Desde los picos nevados de los Urales hasta los vastos bosques de Siberia, el país ofrece una variedad de experiencias al aire libre, como el trekking, el esquí y la observación de la vida silvestre.
-
+                <details>
+                    <summary>Leer más</summary>
+                    <div id="parrafo2">
+                        <p>Explora la imponente Plaza Roja y maravíllate con la espectacular arquitectura del Kremlin en Moscú, o viaja en el tiempo mientras recorres los magníficos palacios y canales de San Petersburgo. Cada ciudad es un tesoro de historia y cultura, donde podrás sumergirte en la grandeza del pasado imperial ruso.</p>
+                    </div>
+                    <div id="parrafo3">
+                        <p>Pero Rusia no es solo historia; también es una tierra de naturaleza salvaje y paisajes impresionantes. Desde los picos nevados de los Urales hasta los vastos bosques de Siberia, el país ofrece una variedad de experiencias al aire libre, como el trekking, el esquí y la observación de la vida silvestre.
                         Y no podemos olvidar la rica cultura rusa, desde la música clásica de compositores como Tchaikovsky y Rachmaninoff hasta la vibrante escena artística contemporánea. Sumérgete en la cultura local mientras disfrutas de la deliciosa gastronomía rusa, que incluye platos tradicionales como el borsch, el pelmeni y el caviar.</p>
-                </div>
-            </details>
-        </section>
-        <section class="locations" id="locations">
-            <h2>Atractivos para visitar</h2>
-            <div class="sites">
-                <div class="site">
-                    <img  src="https://th.bing.com/th/id/OIP.mGh8TGuc2ZlDy0tN1SdWTwHaE7?rs=1&pid=ImgDetMain" alt="Kremlin">
-                    <div class="overlay">
-                        <h3>La Plaza Roja y el Kremlin en Moscú</h3>
                     </div>
-                </div>
-                <div class="site">
-                    <img  src="https://th.bing.com/th/id/OIP.bJVBEjzeTp_FvlY9z1lq7AHaE8?rs=1&pid=ImgDetMain" alt="Hermitage">
-                    <div class="overlay">
-                        <h3>El Museo del Hermitage en San Petersburgo</h3>
-                        <p>Uno de los museos más grandes y prestigiosos del mundo.</p>
+                </details>
+            </section>
+            <section class="locations" id="locations">
+                <h2>Atractivos para visitar</h2>
+                <div class="sites">
+                    <div class="site">
+                        <img  src="https://th.bing.com/th/id/OIP.mGh8TGuc2ZlDy0tN1SdWTwHaE7?rs=1&pid=ImgDetMain" alt="Kremlin">
+                        <div class="overlay">
+                            <h3>La Plaza Roja y el Kremlin en Moscú</h3>
+                        </div>
                     </div>
-                </div>
-                <div class="site">
-                    <img  src="https://wallpapercave.com/wp/wp7108785.jpg" alt="Baikal">
-                    <div class="overlay">
-                        <h3>El Lago Baikal en Siberia</h3>
-                        <p>El lago más profundo y antiguo del mundo.</p>
+                    <div class="site">
+                        <img  src="https://th.bing.com/th/id/OIP.bJVBEjzeTp_FvlY9z1lq7AHaE8?rs=1&pid=ImgDetMain" alt="Hermitage">
+                        <div class="overlay">
+                            <h3>El Museo del Hermitage en San Petersburgo</h3>
+                            <p>Uno de los museos más grandes y prestigiosos del mundo.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="site">                
-                    <img  src="https://th.bing.com/th/id/OIP.PyCOh5jO2fbJgUsnKGdpnAHaE6?rs=1&pid=ImgDetMain" alt="Salvador">
-                    <div class="overlay">
-                        <h3>La Iglesia del Salvador sobre la Sangre Derramada en San Petersburgo</h3>
-                        <P>Una obra maestra arquitectónica.</P>
+                    <div class="site">
+                        <img  src="https://wallpapercave.com/wp/wp7108785.jpg" alt="Baikal">
+                        <div class="overlay">
+                            <h3>El Lago Baikal en Siberia</h3>
+                            <p>El lago más profundo y antiguo del mundo.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="site">                
-                    <img  src="https://th.bing.com/th/id/OIP.E5_hiSf2c-SoRx0UxLK9hQHaE8?rs=1&pid=ImgDetMain" alt="Isaac">
-                    <div class="overlay">
-                        <h3>La Catedral de San Isaac en San Petersburgo</h3>
-                        <p>Un impresionante edificio de estilo neoclásico con una cúpula dorada.</p>
+                    <div class="site">                
+                        <img  src="https://th.bing.com/th/id/OIP.PyCOh5jO2fbJgUsnKGdpnAHaE6?rs=1&pid=ImgDetMain" alt="Salvador">
+                        <div class="overlay">
+                            <h3>La Iglesia del Salvador sobre la Sangre Derramada en San Petersburgo</h3>
+                            <P>Una obra maestra arquitectónica.</P>
+                        </div>
                     </div>
-                </div>
-                <div class="site">               
-                    <img  src="https://thumbs.dreamstime.com/b/fachada-del-teatro-de-bolshoi-en-mosc%C3%BA-30265757.jpg" alt="Bolshói">
-                    <div class="overlay">
-                        <h3>El Teatro Bolshói en Moscú</h3>
-                        <p>Una institución cultural legendaria, famosa por sus espectáculos de ópera y ballet.</p>
+                    <div class="site">                
+                        <img  src="https://th.bing.com/th/id/OIP.E5_hiSf2c-SoRx0UxLK9hQHaE8?rs=1&pid=ImgDetMain" alt="Isaac">
+                        <div class="overlay">
+                            <h3>La Catedral de San Isaac en San Petersburgo</h3>
+                            <p>Un impresionante edificio de estilo neoclásico con una cúpula dorada.</p>
+                        </div>
                     </div>
-                </div>
-        </div>
-        </section>
-        <section class="itinerario" id="itinerario">
-            <h1>Que hacer en Rusia</h1>
-            <article>
-                <h2>Día 1</h2>
-                <ul>
-                    <li><strong>Mañana:</strong> Visita la Plaza Roja y el Kremlin, explorando la Catedral de San Basilio, el Mausoleo de Lenin y el Palacio del Kremlin.</li>
-                    <li><strong>Tarde:</strong> Disfruta de un almuerzo tradicional en un restaurante cercano y luego explora el Museo Estatal de Historia.</li>
-                    <li><strong>Noche:</strong> Cena en un restaurante con vistas al río Moscova y luego da un paseo nocturno por el centro de la ciudad iluminado.</li>
-                </ul>
-            </article>
-            <article>
-                <h2>Día 2</h2>
-                <ul>
-                    <li><strong>Mañana:</strong> Visita la Galería Tretyakov para explorar la colección de arte ruso más grande del mundo.</li>
-                    <li><strong>Tarde:</strong> Almuerza en un café local y luego da un paseo por el Parque Gorki.</li>
-                    <li><strong>Noche:</strong> Cena en un restaurante de cocina internacional y luego disfruta de la vida nocturna en los bares y clubes de Moscú.</li>
-                </ul>
-            </article>
-            <article>
-                <h2>Día 3</h2>
-                <ul>
-                    <li><strong>Mañana:</strong> Viaja en tren a San Petersburgo y comienza tu visita con el Museo del Hermitage.</li>
-                    <li><strong>Tarde:</strong>  Disfruta de un almuerzo en un café cerca del río Neva y luego explora la Fortaleza de San Pedro y San Pablo.</li>
-                    <li><strong>Noche:</strong> Cena en un restaurante de cocina rusa y luego asiste a una presentación de ballet en el Teatro Mariinski.</li>
-                </ul>
+                    <div class="site">               
+                        <img  src="https://thumbs.dreamstime.com/b/fachada-del-teatro-de-bolshoi-en-mosc%C3%BA-30265757.jpg" alt="Bolshói">
+                        <div class="overlay">
+                            <h3>El Teatro Bolshói en Moscú</h3>
+                            <p>Una institución cultural legendaria, famosa por sus espectáculos de ópera y ballet.</p>
+                        </div>
+                    </div>
+            </div>
+            </section>
+            <section class="itinerario" id="itinerario">
+                <h1>Que hacer en Rusia</h1>
+                <article>
+                    <h2>Día 1</h2>
+                    <ul>
+                        <li><strong>Mañana:</strong> Visita la Plaza Roja y el Kremlin, explorando la Catedral de San Basilio, el Mausoleo de Lenin y el Palacio del Kremlin.</li>
+                        <li><strong>Tarde:</strong> Disfruta de un almuerzo tradicional en un restaurante cercano y luego explora el Museo Estatal de Historia.</li>
+                        <li><strong>Noche:</strong> Cena en un restaurante con vistas al río Moscova y luego da un paseo nocturno por el centro de la ciudad iluminado.</li>
+                    </ul>
+                </article>
+                <article>
+                    <h2>Día 2</h2>
+                    <ul>
+                        <li><strong>Mañana:</strong> Visita la Galería Tretyakov para explorar la colección de arte ruso más grande del mundo.</li>
+                        <li><strong>Tarde:</strong> Almuerza en un café local y luego da un paseo por el Parque Gorki.</li>
+                        <li><strong>Noche:</strong> Cena en un restaurante de cocina internacional y luego disfruta de la vida nocturna en los bares y clubes de Moscú.</li>
+                    </ul>
+                </article>
+                <article>
+                    <h2>Día 3</h2>
+                    <ul>
+                        <li><strong>Mañana:</strong> Viaja en tren a San Petersburgo y comienza tu visita con el Museo del Hermitage.</li>
+                        <li><strong>Tarde:</strong>  Disfruta de un almuerzo en un café cerca del río Neva y luego explora la Fortaleza de San Pedro y San Pablo.</li>
+                        <li><strong>Noche:</strong> Cena en un restaurante de cocina rusa y luego asiste a una presentación de ballet en el Teatro Mariinski.</li>
+                    </ul>
             </article>
             <article>
                 <h2>Día 4</h2>
@@ -144,3 +143,6 @@
             <h2>¿Cuanto te vale?</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/RZiAvaCiHss?si=W_hgvMeMbPSU2-vY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
+    </main>
+</body>
+</html>
