--- a/HTML/Australia.html
+++ b/HTML/Australia.html
@@ -18,7 +18,7 @@
         <nav>
             <ul class="nav-list">
                 <li><a href="/HTML/cancun.html">Cancun</a></li>
-                <li><a href="/HTML/index.html">Inicio</a></li>
+                <li><a href="/index.html">Inicio</a></li>
                 <li><a href="/HTML/Japon.html">Japon</a></li>
                 <li><a href="/HTML/NewYork.html">New York</a></li>
                 <li><a href="/HTML/Paris.html">Paris</a></li>
@@ -167,3 +167,6 @@
                 <h2>¿Cuanto te vale?</h2>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/tPYjJhxcr8o?si=7fg53F03tOyMJF-I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
+    </main>
+    </body>
+</html>
