--- a/HTML/Japon.html
+++ b/HTML/Japon.html
@@ -20,7 +20,7 @@
             <ul class="nav-list">
                 <li><a href="Australia.html">Australia</a></li>
                 <li><a href="cancun.html">Cancun</a></li>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="/index.html">Inicio</a></li>
                 <li><a href="NewYork.html">New York</a></li>
                 <li><a href="Paris.html">Paris</a></li>
                 <li><a href="Rusia.html">Rusia</a></li>
