--- a/HTML/NewYork.html
+++ b/HTML/NewYork.html
@@ -19,7 +19,7 @@
             <ul class="nav-list">
                 <li><a href="Australia.html">Australia</a></li>
                 <li><a href="cancun.html">Cancun</a></li>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="/index.html">Inicio</a></li>
                 <li><a href="Paris.html">Paris</a></li>
                 <li><a href="Japon.html">Japon</a></li>
                 <li><a href="Rusia.html">Rusia</a></li>
@@ -129,3 +129,6 @@
                     <h2>¿Cuanto te vale?</h2>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/fW5MhDONziU?si=bcJ7ILFP7kJoSZSO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </section>
+            </main>
+        </body>
+        </html>
