--- a/HTML/Paris.html
+++ b/HTML/Paris.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="Australia.html">Australia</a></li>
                 <li><a href="cancun.html">Cancun</a></li>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="/index.html">Inicio</a></li>
                 <li><a href="Japon.html">Japon</a></li>
                 <li><a href="NewYork.html">New York</a></li>
                 <li><a href="Rusia.html">Rusia</a></li>
@@ -159,3 +159,6 @@
             <h2>¿Cuanto te vale?</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/k1YavgeHU_4?si=0BcgdERlmVHScqZy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
+    </main>
+</body>
+</html>
