--- a/HTML/cancun.html
+++ b/HTML/cancun.html
@@ -18,7 +18,7 @@
         <nav>
             <ul class= 'nav-list'>
                 <li><a href="Australia.html">Australia</a></li>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="/index.html">Inicio</a></li>
                 <li><a href="Japon.html">Japon</a></li>
                 <li><a href="NewYork.html">New York</a></li>
                 <li><a href="Paris.html">Paris</a></li>
@@ -162,3 +162,6 @@
                 <h2>¿Cuanto te vale?</h2>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/o9wMono-zQU?si=awIIEZ-VkHiLdRXa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </section>
+        </main>
+    </body>
+    </html>
