--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <h1>Travel Partners</h1>
         <nav>
             <ul class="nav-list">
-                <li><a href="Australia.html">¡Australia!</a></li>
-                <li><a href="cancun.html">¡Cancun!</a></li>
-                <li><a href="Japon.html">¡Japon!</a></li>
-                <li><a href="NewYork.html">¡New York!</a></li>
-                <li><a href="Paris.html">¡Paris!</a></li>
-                <li><a href="Rusia.html">¡Rusia!</a></li>
+                <li><a href="/HTML/Australia.html">¡Australia!</a></li>
+                <li><a href="/HTML/cancun.html">¡Cancun!</a></li>
+                <li><a href="/HTML/Japon.html">¡Japon!</a></li>
+                <li><a href="/HTML/NewYork.html">¡New York!</a></li>
+                <li><a href="/HTML/Paris.html">¡Paris!</a></li>
+                <li><a href="/HTML/Rusia.html">¡Rusia!</a></li>
             </ul>
         </nav>
         <img src="https://img.icons8.com/isometric/50/airplane-landing--v1.png" alt="airplane-landing--v1" class="header-icon">
