--- a/HTML/NewYork.html
+++ b/HTML/NewYork.html
@@ -17,12 +17,12 @@
         <h1>New York</h1>
         <nav>
             <ul class="nav-list">
-                <li><a href="Australia.html">Australia</a></li>
-                <li><a href="cancun.html">Cancun</a></li>
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a href="Paris.html">Paris</a></li>
-                <li><a href="Japon.html">Japon</a></li>
-                <li><a href="Rusia.html">Rusia</a></li>
+                <li><a href="../HTML/Australia.html">Australia</a></li>
+                <li><a href="../HTML/cancun.html">Cancun</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../HTML/Paris.html">Paris</a></li>
+                <li><a href="../HTML/Japon.html">Japon</a></li>
+                <li><a href="../HTML/Rusia.html">Rusia</a></li>
 
             </ul>
         </nav>
