--- a/HTML/NewYork.html
+++ b/HTML/NewYork.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¡New York!</title>
     <link rel="icon" type="image/png" href="https://img.icons8.com/officel/16/new-york.png">
-    <link rel="stylesheet" type="text/css" href="/CSS/styleDestinations.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/styleDestinations.css">
     <meta name="description" content="Información este destino.">
     <meta name="keywords" content="viajes, turismo, New York, Travel Partners">
     <meta name="author" content="Mario Leal" >
