--- a/HTML/cancun.html
+++ b/HTML/cancun.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¡Cancun!</title>
     <link rel="icon" type="image/png" href="https://img.icons8.com/emoji/48/beach-with-umbrella.png">
-    <link rel="stylesheet" type="text/css" href="/CSS/styleDestinations.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/styleDestinations.css">
     <meta name="description" content="Información este destino.">
     <meta name="keywords" content="viajes, turismo, Cancun, Travel Partners">
     <meta name="author" content="Mario Leal" >
