--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Información este destino.">
     <meta name="keywords" content="viajes, turismo, cancun,paris,rusia,new-york,Japon, Travel Partners">
     <meta name="author" content="Mario Leal" >
-    <link rel="stylesheet" type="text/css" href="/practica2/CSS/stylemain.css">
+    <link rel="stylesheet" type="text/css" href="/CSS/stylemain.css">
     <link rel="icon" type="image/png" href="https://img.icons8.com/isometric/50/airplane-landing--v1.png" alt="airplane">
     <title>Travel Partners</title>  
 </head>
@@ -15,12 +15,12 @@
         <h1>Travel Partners</h1>
         <nav>
             <ul class="nav-list">
-                <li><a href="/practica2/HTML/Australia.html">¡Australia!</a></li>
-                <li><a href="/practica2/HTML/cancun.html">¡Cancun!</a></li>
-                <li><a href="/practica2/HTML/Japon.html">¡Japon!</a></li>
-                <li><a href="/practica2/HTML/NewYork.html">¡New York!</a></li>
-                <li><a href="/practica2/HTML/Paris.html">¡Paris!</a></li>
-                <li><a href="/practica2/HTML/Rusia.html">¡Rusia!</a></li>
+                <li><a href="/HTML/Australia.html">¡Australia!</a></li>
+                <li><a href="/HTML/cancun.html">¡Cancun!</a></li>
+                <li><a href="/HTML/Japon.html">¡Japon!</a></li>
+                <li><a href="/HTML/NewYork.html">¡New York!</a></li>
+                <li><a href="/HTML/Paris.html">¡Paris!</a></li>
+                <li><a href="/HTML/Rusia.html">¡Rusia!</a></li>
             </ul>
         </nav>
         <img src="https://img.icons8.com/isometric/50/airplane-landing--v1.png" alt="airplane-landing--v1" class="header-icon">
