--- a/Australia.html
+++ b/Australia.html
@@ -7,7 +7,7 @@
     <link type="image/png" rel="icon" href="https://img.icons8.com/emoji/48/kangaroo-emoji.png">
     <meta name="description" content="Información este destino.">
     <meta name="keywords" content="viajes, turismo, Australia, Travel Partners">
-    <link rel="stylesheet" type="text/css" href="../CSS/styleDestinations.css">
+    <link rel="stylesheet" type="text/css" href="styleDestinations.css">
     <meta name="author" content="Mario Leal" >
     <style>
     </style>
@@ -17,12 +17,12 @@
         <h1>Australia</h1>
         <nav>
             <ul class="nav-list">
-                <li><a href="../HTML/cancun.html">Cancun</a></li>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../HTML/Japon.html">Japon</a></li>
-                <li><a href="../HTML/NewYork.html">New York</a></li>
-                <li><a href="../HTML/Paris.html">Paris</a></li>
-                <li><a href="../HTML/Rusia.html">Rusia</a></li>
+                <li><a href="cancun.html">Cancun</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="Japon.html">Japon</a></li>
+                <li><a href="NewYork.html">New York</a></li>
+                <li><a href="Paris.html">Paris</a></li>
+                <li><a href="Rusia.html">Rusia</a></li>
             </ul>
         </nav>
     </header>
