--- a/cancun.html
+++ b/cancun.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¡Cancun!</title>
     <link rel="icon" type="image/png" href="https://img.icons8.com/emoji/48/beach-with-umbrella.png">
-    <link rel="stylesheet" type="text/css" href="../CSS/styleDestinations.css">
+    <link rel="stylesheet" type="text/css" href="styleDestinations.css">
     <meta name="description" content="Información este destino.">
     <meta name="keywords" content="viajes, turismo, Cancun, Travel Partners">
     <meta name="author" content="Mario Leal" >
@@ -17,12 +17,12 @@
         <h1>Cancun</h1>
         <nav>
             <ul class= 'nav-list'>
-                <li><a href="../HTML/Australia.html">Australia</a></li>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../HTML/Japon.html">Japon</a></li>
-                <li><a href="../HTML/NewYork.html">New York</a></li>
-                <li><a href="../HTML/Paris.html">Paris</a></li>
-                <li><a href="../HTML/Rusia.html">Rusia</a></li>
+                <li><a href="Australia.html">Australia</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="Japon.html">Japon</a></li>
+                <li><a href="NewYork.html">New York</a></li>
+                <li><a href="Paris.html">Paris</a></li>
+                <li><a href="Rusia.html">Rusia</a></li>
             </ul>
         </nav>
     </header>
