--- a/Rusia.html
+++ b/Rusia.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¡Rusia!</title>
     <link rel="icon" type="image/png" href="https://img.icons8.com/papercut/60/mosque.png">
-    <link rel="stylesheet" type="text/css" href="../CSS/styleDestinations.css">
+    <link rel="stylesheet" type="text/css" href="styleDestinations.css">
     <meta name="description" content="Información este destino.">
     <meta name="keywords" content="viajes, turismo, Rusia, Travel Partners">
     <meta name="author" content="Mario Leal" >
@@ -17,12 +17,12 @@
         <h1>Rusia</h1>
         <nav>
             <ul class="nav-list">
-                <li><a href="../HTML/Australia.html">Australia</a></li>
-                <li><a href="../HTML/cancun.html">Cancun</a></li>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../HTML/Paris.html">Paris</a></li>
-                <li><a href="../HTML/NewYork.html">New York</a></li>
-                <li><a href="../HTML/Japon.html">Japon</a></li>
+                <li><a href="Australia.html">Australia</a></li>
+                <li><a href="cancun.html">Cancun</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="Paris.html">Paris</a></li>
+                <li><a href="NewYork.html">New York</a></li>
+                <li><a href="Japon.html">Japon</a></li>
             </ul>
         </nav>
         </header>
