--- a/Japon.html
+++ b/Japon.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¡Japon!</title>
     <link rel="icon" type="image/png" href="https://img.icons8.com/external-flat-icons-maxicons/85/external-japan-japan-flat-flat-icons-maxicons.png">
-    <link rel="stylesheet" type="text/css" href="/CSS/styleDestinations.css">
+    <link rel="stylesheet" type="text/css" href="styleDestinations.css">
     <meta name="description" content="Información este destino.">
     <meta name="keywords" content="viajes, turismo, Japon, Travel Partners">
     <meta name="author" content="Mario Leal" >
